pijama_driver/tests/type_check/pass/functions/int_function_call_returns_int.pj
fn foo(x: Int) do x end

foo(10) + 1
