pijama_driver/tests/type_check/fail/functions/wrong_type_fn_call_arg.pj
fn foo(n: Int) do
    1
end

foo(true)